Use 3rd party navigation drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Facts</string>
     <string name="next">Next</string>
     <string name="prev">Prev</string>
-    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit </string>
+    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit
+    Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit
+    Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit</string>
     <string name="menu">Menu</string>
     <string name="action_best">Best</string>
     <string name="action_prev">Prev</string>
